# create-cxx

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  .release-it.json  LICENSE  README.md  build.config.ts  bun.lockb  cliff.toml  demo.tape  index.js  package.json
.github/workflows/: ci.yml  release.yml
src/: index.ts
template-magnum/: vcpkg.json
template-magnum/src/: main.cpp
template-minimalist/: CMakeLists.txt  clang-format  gitignore  vcpkg.json
template-minimalist/src/: main.cpp
template-raylib/: CMakeLists.txt  editorconfig
template-raylib/src/: main.cpp
template-sdl2/: CMakeLists.txt
template-sdl3/: CMakeLists.txt
template-sfml/: CMakeLists.txt  CMakePresets.json  vcpkg.json
templates/libtcod/: CMakeLists.txt  CMakePresets.json  vcpkg.json
templates/libtcod/src/: main.cpp
templates/magnum/: CMakeLists.txt
templates/minimalist/: CMakeLists.txt
templates/ogre/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  gitignore  vcpkg.json
templates/ogre/src/: main.cpp
templates/raylib/: CMakeLists.txt  vcpkg.json
templates/sdl2/: CMakeLists.txt  vcpkg.json
templates/sdl2/src/: main.cpp
templates/sdl3/: CMakeLists.txt
templates/sdl3/src/: main.cpp
templates/sfml/: CMakeLists.txt
templates/sfml/src/: main.cpp
